// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<div>
  <input
    className="input"
    defaultValue=""
    id=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    style={Object {}}
    type="text"
  />
  <p
    className="infoText"
  />
</div>
`;

exports[`Input when error prop is true renders correctly 1`] = `
<div>
  <input
    className="input error"
    defaultValue=""
    id=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    style={Object {}}
    type="text"
  />
  <p
    className="infoText error"
  />
</div>
`;

exports[`Input when idForLabel prop is passed in renders correctly 1`] = `
<div>
  <input
    className="input"
    defaultValue=""
    id="exampleID"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    style={Object {}}
    type="text"
  />
  <p
    className="infoText"
  />
</div>
`;

exports[`Input when infoText prop is passed in renders correctly 1`] = `
<div>
  <input
    className="input"
    defaultValue=""
    id=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    style={Object {}}
    type="text"
  />
  <p
    className="infoText"
  >
    Example Text
  </p>
</div>
`;

exports[`Input when password prop is true renders correctly 1`] = `
<div>
  <input
    className="input"
    defaultValue=""
    id=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    style={Object {}}
    type="text"
  />
  <p
    className="infoText"
  />
</div>
`;

exports[`Input when placeholder prop is passed in renders correctly 1`] = `
<div>
  <input
    className="input"
    defaultValue=""
    id=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Example Text"
    style={Object {}}
    type="text"
  />
  <p
    className="infoText"
  />
</div>
`;

exports[`Input when value prop is passed in renders correctly 1`] = `
<div>
  <input
    className="input"
    defaultValue=""
    id=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    style={Object {}}
    type="text"
  />
  <p
    className="infoText"
  />
</div>
`;

exports[`checkbox renders correctly 1`] = `
<div>
  <div
    className="checkBoxWrapper"
  >
    <input
      id="exampleID"
      onBlur={[Function]}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="checkbox"
    />
    <label
      htmlFor="exampleID"
      style={Object {}}
    >
      None Provided
    </label>
  </div>
  <p
    className="infoText"
  />
</div>
`;

exports[`radio renders correctly 1`] = `
<div>
  <div
    className="radioWrapper"
  >
    <input
      id="exampleID"
      onBlur={[Function]}
      onChange={[Function]}
      type="radio"
    />
    <div
      className="radio"
    />
    <label
      htmlFor="exampleID"
      style={Object {}}
    >
      None Provided
    </label>
  </div>
  <p
    className="infoText"
  />
</div>
`;
